--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,10 @@ pyyaml = "^6.0.1"
 # No need for PyTorch! Works with RTX 5080 out of the box
 kokoro-onnx = {extras = ["gpu"], version = "^0.4.9"}
 
+# LLM integration
+aiohttp = "^3.9.0"  # For Ollama API calls
+requests = "^2.31.0"  # For synchronous API calls in tray
+
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
 black = "^23.7.0"
