Add integration and manual tests for Ollama and Claude functionality
- Implemented integration tests for Ollama model discovery and interaction in `test_ollama_discovery.py` and `test_ollama_integration.py`.
- Created manual tests for Claude CLI accessibility and subprocess behavior in `test_claude_cli.py` and `test_subprocess_claude.py`.
- Added tests for menu callbacks to ensure they don't pollute the config in `test_menu_callbacks.py`.
- Developed tests for Portuguese voices in Kokoro TTS in `test_portuguese_voices.py`.
- Validated thinking tag removal functionality in `test_thinking_tags.py`.
- Tested VAD + TTS interrupt functionality in `test_vad_tts_interrupt.py`.
- Verified auto-restart functionality in tray menu actions in `test_auto_restart.py`.
- Added tests for subprocess handling in secondary asyncio loops in `test_thread_subprocess.py`.

--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-advanced:
+Eu estou cancelando manualmente porque o processo está pendurando ali naquela parte. Aí eu tenho que cancelar.advanced:
   cache_dir: ''
   temp_dir: ''
 audio:
@@ -46,8 +46,8 @@ tts:
   kokoro:
     language: pt-br
     model_path: kokoro-v1.0.onnx
-    speed: 1.0
-    voice: af_sarah
+    speed: 1.25
+    voice: pf_dora
     voices_path: voices-v1.0.bin
   volume: 0.8
 voice:
