--- a/config.yaml
+++ b/config.yaml
@@ -8,7 +8,7 @@ hotkey:
   auto_stop_silence: 2.0
   keyboard_trigger: ctrl+alt+v
   max_duration: 60
-  mode: push_to_talk
+  mode: toggle
   mouse_button: side1
   type: mouse
   vad_enabled: false
@@ -60,7 +60,7 @@ tts:
     voices_path: voices-v1.0.bin
   volume: 0.8
 voice:
-  claude_mode: true
+  claude_mode: false
   event_loop:
     local: true
     pubsub_buffer_size: 100
