--- a/config.yaml
+++ b/config.yaml
@@ -8,8 +8,8 @@ hotkey:
   auto_stop_silence: 2.0
   keyboard_trigger: ctrl+alt+v
   max_duration: 60
-  mode: toggle
-  mouse_button: side1
+  mode: push_to_talk
+  mouse_button: middle
   type: mouse
   vad_enabled: false
   vad_threshold: 0.002
@@ -60,7 +60,7 @@ tts:
     voices_path: voices-v1.0.bin
   volume: 0.8
 voice:
-  claude_mode: false
+  claude_mode: true
   event_loop:
     local: true
     pubsub_buffer_size: 100
@@ -78,7 +78,7 @@ voice:
     ollama:
       base_url: http://localhost:11434
       model: qwen3:14b
-    provider: n8n_toolcalling
+    provider: ollama
     sentence_chunking: true
     streaming: true
   mode: event_driven
