--- a/config.yaml
+++ b/config.yaml
@@ -8,10 +8,10 @@ hotkey:
   auto_stop_silence: 2.0
   keyboard_trigger: ctrl+alt+v
   max_duration: 60
-  mode: push_to_talk
+  mode: toggle
   mouse_button: middle
   type: mouse
-  vad_enabled: false
+  vad_enabled: true
   vad_threshold: 0.002
 logging:
   level: DEBUG
@@ -78,7 +78,7 @@ voice:
     ollama:
       base_url: http://localhost:11434
       model: qwen3:14b
-    provider: ollama
+    provider: n8n_toolcalling
     sentence_chunking: true
     streaming: true
   mode: event_driven
